documents ui table created

--- a/src/app/administrator/document-manager/document-manager.component.html
+++ b/src/app/administrator/document-manager/document-manager.component.html
@@ -1,38 +1,71 @@
-<h3 style="text-align: center;">Recommended documents for filing Gross basis return</h3>
 <br>
-<div style="text-align: center;">
-    <h4>26AS</h4>
-    <div *ngIf="tws1">
-        <button style="background-color: green; color: black; width: 50px; float: right; height: 100px;" disabled></button>
-    </div>
+    <br>
+    <br>
 
-    <p-fileUpload name="tws" url="http://localhost:3000/file" (onUpload)="onTwsUpload($event)" accept=".txt">
-    </p-fileUpload>
-   
-</div>
+<p-table  responsiveLayout="scroll">
+    <br>
+    <br>
+    <br>
+    <ng-template pTemplate="header">
+        <tr>
+            <th>ProjectID</th>
+            <th>Document Tag</th>
+            <th>Documnet Type</th>
+            <th>Status</th>
+            <th>Upload</th>
+            <th>Validate</th>
+        </tr>
 
-<div style="text-align: center;">
-    <h4>Sales Registor</h4>
-    <div *ngIf="salesReg1">
-        <button style="background-color: green; color: black; width: 50px; float: right; height: 100px;" disabled></button>
-    </div>
-    
-    <p-fileUpload name="salesReg" url="http://localhost:3000/file" (onUpload)="onSrUpload($event)" accept=".xlsx">
-    </p-fileUpload>
-</div>
+        
+        <tr>
+            <td>as123</td>
+            <td>26AS</td>
+            <td>txt</td>
+            <td>Not Uploaded</td>
+            <!-- <td><p-fileUpload mode="basic" name="myfile[]" url="http://localhost:3000/client" (onUpload)="myUploader($event)" accept=".txt">
+            </p-fileUpload></td> -->
 
-<div style="text-align: center;">
-    <h4>Related Party Schedule</h4>
-    <div *ngIf="rpt1">
-        <button style="background-color: green; color: black; width: 50px; float: right; height: 100px;" disabled></button>
-    </div>
-    
-    <p-fileUpload name="rpt" url="http://localhost:3000/file" (onUpload)="onRptUpload($event)" accept=".xlsx">
-    </p-fileUpload>
-</div>
+            <td>
+                <p-fileUpload name="myfile" label="Upload" label="Upload" url="http://localhost:3000/file"  (onUpload)="myUploader($event)" accept=".txt"></p-fileUpload>
+            </td>
+            <td><p-button  label="validate" (click)="validate()"></p-button></td>
 
-<div>
-    <ng-template pTemplate="right">
-      
-      </ng-template>
-</div>
+            <td></td>
+            
+        </tr>
+
+        <tr>
+            <td>as212</td>
+            <td>Sales Register</td>
+            <td>xlsx</td>
+            <td>Not Uploaded</td>
+            <!-- <td><p-fileUpload mode="basic" name="myfile[]" url="http://localhost:3000/client" (onUpload)="myUploader($event)" accept=".txt">
+            </p-fileUpload></td> -->
+
+            <td>
+                <p-fileUpload name="myfile" label="Upload" url="http://localhost:3000/file"  (uploadHandler)="myUploader1($event)" accept=".xlsx"></p-fileUpload>
+            </td>
+            <td><p-button  label="validate" (click)="validate()"></p-button></td>
+
+            <td></td>
+            
+        </tr>
+
+        <tr>
+            <td>as212</td>
+            <td>RPT</td>
+            <td>xlsx</td>
+            <td>Not Uploaded</td>
+            <!-- <td><p-fileUpload mode="basic" name="myfile[]" url="http://localhost:3000/client" (onUpload)="myUploader($event)" accept=".txt">
+            </p-fileUpload></td> -->
+
+            <td>
+                <p-fileUpload name="myfile" label="Upload" url="http://localhost:3000/file"  (uploadHandler)="myUploader2($event)" accept=".pdf"></p-fileUpload>
+            </td>
+            <td><p-button  label="validate" (click)="validate()"></p-button></td>
+
+            <td></td>
+            
+        </tr>
+    </ng-template>
+</p-table>
