--- a/src/app/administrator/project/project.component.html
+++ b/src/app/administrator/project/project.component.html
@@ -124,7 +124,7 @@
     </ng-template>
     <ng-template pTemplate="summary">
       <div class="p-d-flex p-ai-center p-jc-between">
-        In total there are {{project1 ? project1.length : 0 }} users.
+        In total there are {{project1 ? project1.length : 0 }} projects.
       </div>
     </ng-template>
   </p-table>
