--- a/src/app/administrator/document-manager/document-manager.component.html
+++ b/src/app/administrator/document-manager/document-manager.component.html
@@ -1,12 +1,10 @@
 <br>
     <br>
     <br>
-
-<p-table  responsiveLayout="scroll">
-    <br>
-    <br>
-    <br>
-    <ng-template pTemplate="header">
+<div style="text-align: center; font-weight: bolder;">
+<p-table  responsiveLayout="scroll" >
+    <ng-template pTemplate="header" >
+        
         <tr>
             <th>ProjectID</th>
             <th>Document Tag</th>
@@ -30,25 +28,23 @@
             </td>
             <td><p-button  label="validate" (click)="validate()"></p-button></td>
 
-            <td></td>
-            
         </tr>
 
         <tr>
             <td>as212</td>
             <td>Sales Register</td>
-            <td>xlsx</td>
-            <td>Not Uploaded</td>
+            <td>xlsx</td>          
+            <td *ngIf="!srg1">Not Uploaded</td>
+            <td *ngIf="srg1">Uploaded</td>
+        
             <!-- <td><p-fileUpload mode="basic" name="myfile[]" url="http://localhost:3000/client" (onUpload)="myUploader($event)" accept=".txt">
             </p-fileUpload></td> -->
 
             <td>
-                <p-fileUpload name="myfile" label="Upload" url="http://localhost:3000/file"  (uploadHandler)="myUploader1($event)" accept=".xlsx"></p-fileUpload>
+                <p-fileUpload name="myfile" label="Upload" url="http://localhost:3000/file"  (onUpload)="myUploader1($event)" accept=".xlsx"></p-fileUpload>
             </td>
             <td><p-button  label="validate" (click)="validate()"></p-button></td>
 
-            <td></td>
-            
         </tr>
 
         <tr>
@@ -60,12 +56,12 @@
             </p-fileUpload></td> -->
 
             <td>
-                <p-fileUpload name="myfile" label="Upload" url="http://localhost:3000/file"  (uploadHandler)="myUploader2($event)" accept=".pdf"></p-fileUpload>
+                <p-fileUpload name="myfile" label="Upload" url="http://localhost:3000/file"  (onUpload)="myUploader2($event)" accept=".pdf"></p-fileUpload>
             </td>
             <td><p-button  label="validate" (click)="validate()"></p-button></td>
 
-            <td></td>
             
         </tr>
     </ng-template>
 </p-table>
+</div>
