--- a/src/app/administrator/document-manager/document-manager.component.html
+++ b/src/app/administrator/document-manager/document-manager.component.html
@@ -16,7 +16,7 @@
 
         
         <tr>
-            <td>as123</td>
+            <td>{{finalProjId}}</td>
             <td>26AS</td>
             <td>txt</td>
             <td>Not Uploaded</td>
@@ -31,7 +31,7 @@
         </tr>
 
         <tr>
-            <td>as212</td>
+            <td>{{finalProjId}}</td>
             <td>Sales Register</td>
             <td>xlsx</td>          
             <td *ngIf="!srg1">Not Uploaded</td>
@@ -48,7 +48,7 @@
         </tr>
 
         <tr>
-            <td>as212</td>
+            <td>{{finalProjId}}</td>
             <td>RPT</td>
             <td>xlsx</td>
             <td>Not Uploaded</td>
