--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -14,15 +14,12 @@
         <a style="text-decoration: none;" (click)="visibleSidebar1 = false" routerLink="/admin/user"> User management</a>
       </h3>
       <!-- <h3 style="font-weight:normal">
-        <i class="pi pi-file-pdf" style="font-size: 20px; "></i>
-        <a style="text-decoration: none;" (click)="visibleSidebar1 = false" routerLink="/admin/mydoc"> My Documents</a>
-      </h3>
-      <h3 style="font-weight:normal">
         <i class="pi pi-desktop" style="font-size: 20px; "></i>
         <a style="text-decoration: none;" (click)="visibleSidebar1 = false" routerLink="/admin/project"> Project</a>
       </h3> -->
       <h3 style="font-weight:normal">
-        <p-panelMenu [model]="items" [style]="{'width':'300px'}"></p-panelMenu>
+        <i class="pi pi-file-pdf" style="font-size: 20px; "></i>
+        <a style="text-decoration: none;" (click)="visibleSidebar1 = false" routerLink="/admin/myprojects"> My Workspace</a>
       </h3>
       <h3 style="font-weight:normal">
         User Management
