--- a/src/app/administrator/assign-team/assign-team.component.html
+++ b/src/app/administrator/assign-team/assign-team.component.html
@@ -1,7 +1,7 @@
 <br><br><br>
 <div>
     <div>
-        <p-card fxFlext=100% fxLayout="row" fxLayoutAlign="center center" >
+        <p-card >
             <ng-template pTemplate="header">
               <h3>Gross Return</h3>
             </ng-template>
@@ -17,50 +17,54 @@
         </p-card>
     </div>
 </div>
-<br><br><br>
+<br>
 
 <div>
-    <!-- <p-table>
-      <ng-template pTemplate="header">
-        <tr>
-    
-          <th pSortableColumn="name">Name 
-          </th>
-    
-          <th pSortableColumn="emailId">Email Id 
-          </th>
-          <th pSortableColumn="role">Role
-          </th>
-          <th pSortableColumn="activity">Activity 
-          </th>
-        </tr>
-      </ng-template>
-
-      <ng-template pTemplate="body" let-userData>
-        <tr>
-          <td><p-dropdown [options]=userData [(ngModel)]="selectedUser" [virtualScroll]="true" optionLabel='name' placeholder="select User"></p-dropdown></td>
-          <td>Akshay</td>
-          <td>Akshay</td>
-          <td>Akshay</td>
-        </tr>
-      </ng-template>
-    </p-table> -->
-    <table>
-            <tr>
-                
-                <th>Name</th>
-                &nbsp;&nbsp;&nbsp;                <th>Email Id </th>
-                &nbsp;&nbsp;&nbsp;<th>Role</th>
-                &nbsp;&nbsp;&nbsp;<th>Activity </th>
-            </tr>
-            <tr>
-                <td><p-dropdown [options]=userData  [(ngModel)]="selectedUser" [virtualScroll]="true" optionLabel='name' placeholder="select User"></p-dropdown></td>
-            &nbsp;&nbsp;&nbsp;    <td>shiv</td>
-            &nbsp;&nbsp;&nbsp;<td>shiv</td>
-            &nbsp;&nbsp;&nbsp;<td>shiv</td>
-                
-                
-            </tr>
-            
-    </table>
-    </div>            
+  <p-table #dt [value]="teamData"
+    [globalFilterFields]="['Name','Email-ID','Role','Activity']" [rowHover]="true" dataKey="id"
+    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
+    <ng-template pTemplate="caption">
+      <div class="p-d-flex p-ai-center p-jc-between">
+        <h5 class="p-m-0">Manage Team</h5>
+        <span class="p-input-icon-left">
+          <p-dropdown [options]=userData [(ngModel)]="selectedUser" optionLabel='name' placeholder="select User">
+          </p-dropdown>
+    &nbsp;      <p-button (click)="addMember()">ADD</p-button>
+        </span>
+      </div>
+    </ng-template>
+    <ng-template pTemplate="header">
+      <tr>
+        <th style="width: 3rem">
+  
+        </th>
+  
+        <th pSortableColumn="name">Name 
+        </th>
+  
+        <th pSortableColumn="email_id">Email_Id 
+        </th>
+        <th pSortableColumn="role">Role 
+        </th>
+        <th pSortableColumn="activity">Activity
+        </th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-teamData>
+      <tr>
+        <td>
+  
+        </td>
+        <td>{{teamData.name }}</td>
+        <td>{{teamData.email }}</td>
+        <td>{{teamData.role.role }}</td>
+        <td>{{"Gross Return"}}</td>
+      </tr>
+    </ng-template>
+  </p-table>
+  </div>  
+  <br>
+  <div *ngIf="button">
+  <p-button style="text-align: center;" (click)=saveTeam()>Save </p-button>
+&nbsp;&nbsp;&nbsp;  <p-button style="text-align: center;" (click)=docUpload()>Next Step </p-button>
+</div>
