--- a/src/app/administrator/mt-projects/mt-projects.component.html
+++ b/src/app/administrator/mt-projects/mt-projects.component.html
@@ -18,14 +18,14 @@
   <p-dialog  [(visible)]="projectDialog" [style]="{width: '450px'}" header="Project Details" [modal]="true" styleClass="p-fluid">
     <ng-template pTemplate="content">
         <div class="p-field" style="margin-bottom: 50px;">
-            <p-dropdown [options]=client1 [(ngModel)]="selectedClient" optionLabel='companyName' placeholder="select Client">
+            <p-dropdown [options]=client1  [(ngModel)]="selectedClient" optionLabel='companyName' placeholder="select Client">
             </p-dropdown>
         </div>
                 
         <div class="p-field">
             <label for="name">Project Name</label>
             <input type="text" pInputText id="name" pattern="[a-zA-Z ]{2,20}" [(ngModel)]="project.projectName" required autofocus />
-            <small class="p-invalid" *ngIf="submitted && !project.projectName">Project Name is required.</small>
+            <small class="p-invalid" style="color: red;" *ngIf="submitted && !project.projectName">Project Name is required.</small>
         </div>
     
         <br><br>
@@ -44,7 +44,7 @@
         <div class="p-field">
             <label for="name">Precision Code</label>
             <input type="text" pInputText id="pcode" pattern="[a-zA-Z ]{2,20}" [(ngModel)]="project.precisionCode" required autofocus />
-            <small class="p-invalid" *ngIf="submitted && !project.precisionCode">Precision code is required.</small>
+            <small class="p-invalid" style="color: red;" *ngIf="submitted && !project.precisionCode">Precision code is required.</small>
         </div>
 
         
