--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,16 @@
+<html>
 <header style="background-color: orangered;">
 
-  <div fxLayout="row" fxLayoutAlign="space-between end">
-    <img src="assets/Images/pwc.png">
-    <h3>CIT Compliance Platform</h3>
-    <app-homepage></app-homepage>
-  </div>
+    <div fxLayout="row" fxLayoutAlign="space-between end">
+        <img src="assets/Images/pwc.png">
+        <h3>CIT Compliance Platform</h3>
+        <app-homepage></app-homepage>
+    </div>
 
 </header>
 
-<div>
-  <router-outlet></router-outlet>
-</div>
+<body>
+    <router-outlet></router-outlet>
+</body>
+
+</html>
