--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -41,10 +41,11 @@
       </h3>
   
     </p-sidebar>
-  
-    <p-button style="float: right; margin-top: -50px; margin-right: 10px; color: darkgoldenrod;" type="button"
+  <div style="float: right; margin-top: -50px; margin-right: 10px; color: darkgoldenrod;">
+    <p-button type="button"
       (click)="visibleSidebar1 = true" icon="pi pi-bars">
     </p-button>
+  </div>
   </div>
 
   
